[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["MrBanana <tomsawyer404@outlook.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
tempfile = "3.2.0"
walkdir = "2.3.2"
